--- a/po/wesnoth-sota/de.po
+++ b/po/wesnoth-sota/de.po
@@ -4114,17 +4114,6 @@ msgstr "Epilog"
 
 #. [part]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:16
-#, fuzzy
-#| msgid ""
-#| "10 VII, 23 YW — Final Entry\n"
-#| "\n"
-#| "We prevailed today on the field, but our victory was somewhat bitter. "
-#| "<i>Everyone</i> was afraid or angry and immediately attacked us instead "
-#| "of listening to our news. I realize now... the world is not ready for our "
-#| "knowledge. I give up on all of them. I am going to live in the old troll "
-#| "city and learn the applications of mountain fire. In some future time, "
-#| "less conservative attitudes will dominate, and I can certainly afford to "
-#| "wait. In the meantime, we are doing what we can to hasten that day."
 msgid ""
 "10 VII, 23 YW — Final Entry\n"
 "\n"
@@ -4145,25 +4134,17 @@ msgstr ""
 "Wir siegten heute auf dem Feld, aber unser Sieg war ein bitterer. <i>Jeder</"
 "i> war ängstlich oder wütend und griff uns sofort an, anstatt unsere "
 "Neuigkeiten zu hören. Ich verstehe es nun... Die Welt ist noch nicht bereit "
-"für unser Wissen. Ich gebe alles auf. Ich werde von nun an in der alten "
-"Trollstadt leben und mich den Verwendungszwecken des Gebirgsfeuers widmen. "
-"Irgendwann in der Zukunft werden weniger konservative Verhaltensweisen "
-"vorherrschen und ich kann es mir leisten, zu warten. In der Zwischenzeit tun "
-"wir, was wir können, um jeden Tag bis dahin so schnell wie möglich hinter "
-"uns zu bringen."
+"für unser Wissen. Sie wollen nicht verstehen dass wir die uralte Furcht vor "
+"dem Tod überwunden haben. Stattdessen bewerten sie und nach unserem "
+"Aussehen, und fallen in Angst und Terror. Ich gebe alles auf. Ich werde von "
+"nun an in der alten Trollstadt leben und mich den Verwendungszwecken des "
+"Gebirgsfeuers widmen. Irgendwann in der Zukunft werden weniger konservative "
+"Verhaltensweisen vorherrschen und ich kann es mir leisten, zu warten. In der "
+"Zwischenzeit tun wir, was wir können, um jeden Tag bis dahin so schnell wie "
+"möglich hinter uns zu bringen."
 
 #. [then]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:31
-#, fuzzy
-#| msgid ""
-#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
-#| "Most of the others are going with him. I wish them success. Vendraxis now "
-#| "knows what he must learn to replicate our metamorphosis. He will use the "
-#| "years left to him in study and practice while he attempts to change the "
-#| "attitudes of his people. As for me, I have placed some spells on my "
-#| "journal to help keep it from harm, and I will make it conspicuous on this "
-#| "battlefield. I hope that it will eventually make its way into the hands "
-#| "of someone in Tath who is willing to learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. Vendraxis now knows "
@@ -4185,18 +4166,10 @@ msgstr ""
 "angewendet, ums es vor Schaden zu schützen, und ich werde es auf diesem "
 "Kampfplatz auffällig platzieren, in der Hoffnung, dass es eines Tages seinen "
 "Weg in die Hände einer Person in Tath findet, die bereit ist, sie zu lernen, "
-"die Geheimnisse der Alten."
+"die Geheimnisse der Ahnen."
 
 #. [else]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:34
-#, fuzzy
-#| msgid ""
-#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
-#| "Most of the others are going with him. I wish them success. As for me, I "
-#| "have placed some spells on my journal to help keep it from harm, and I "
-#| "will make it conspicuous on this battlefield. I hope that it will "
-#| "eventually make its way into the hands of someone in Tath who is willing "
-#| "to learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. As for me, I will "
@@ -4213,7 +4186,7 @@ msgstr ""
 "angewendet, ums es vor Schaden zu schützen, und ich werde es auf diesem "
 "Kampfplatz auffällig platzieren, in der Hoffnung, dass es eines Tages seinen "
 "Weg in die Hände einer Person in Tath findet, die bereit ist, sie zu lernen, "
-"die Geheimnisse der Alten."
+"die Geheimnisse der Ahnen."
 
 #. [unit_type]: id=Bone Bird, race=undead, description=
 #: data/campaigns/Secrets_of_the_Ancients/units/Bone_Bird.cfg:4
