--- a/po/wesnoth-trow/de.po
+++ b/po/wesnoth-trow/de.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-01-22 18:39+0100\n"
+"PO-Revision-Date: 2019-03-21 01:16+0100\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [scenario]: id=22_The_Rise_of_Wesnoth
 #. [campaign]: id=The_Rise_of_Wesnoth
@@ -323,10 +323,6 @@ msgstr ""
 
 #. [message]: speaker=King Eldaric IV
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:153
-#, fuzzy
-#| msgid ""
-#| "It looks like a Wesfolk rabble have seized the Northern Keep! Prepare for "
-#| "battle, Haldric!"
 msgid ""
 "It looks like some Wesfolk rabble have seized the Northern Keep! Prepare for "
 "battle, Haldric!"
@@ -485,9 +481,6 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:254
-#, fuzzy
-#| msgid ""
-#| "My forces are defeated, under your customs of surrender I will go now."
 msgid "My forces are defeated. Under your customs of surrender, I will go now."
 msgstr ""
 "Meine Mannen sind besiegt. Ich akzeptiere eure Bedingungen und werde nun "
@@ -717,11 +710,9 @@ msgstr ""
 
 #. [message]: speaker=Wesfolk Leader
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg:298
-#, fuzzy
-#| msgid "Let there be peace between us, our survival depends on it."
 msgid "Let there be peace between us. Our survival depends on it."
 msgstr ""
-"Möge es Frieden zwischen uns geben, unser aller Überleben hängt davon ab."
+"Möge es Frieden zwischen uns geben. Unser aller Überleben hängt davon ab."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg:306
@@ -925,8 +916,6 @@ msgstr ""
 
 #. [message]: speaker=Tan-Schmog
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/03_A_Harrowing_Escape.cfg:147
-#, fuzzy
-#| msgid "You won’t get much further boy. Grrrr!"
 msgid "You won’t get much further, boy. Grrrr!"
 msgstr "Viel weiter wirst du nicht kommen, Jungchen. Grrrr!"
 
@@ -5398,16 +5387,12 @@ msgstr "Weiß irgendjemand etwas über Trolle?"
 
 #. [message]: speaker=Burin the Lost
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17c_Troll_Hole.cfg:272
-#, fuzzy
-#| msgid ""
-#| "I indeed do. They are green, and mean, and will try to crush you like a "
-#| "bug. They heal very quickly."
 msgid ""
 "I indeed do. They are ugly and mean, and will try to crush you like a bug. "
 "They heal very quickly."
 msgstr ""
-"Ich weiß tatsächlich etwas. Sie sind grün und gemein und sie werden "
-"versuchen, euch wie eine Fliege zu zerquetschen. Und sie erholen sich sehr "
+"Ich weiß tatsächlich etwas. Sie sind hässlich und gemein und sie werden "
+"versuchen, Euch wie eine Fliege zu zerquetschen. Und sie erholen sich sehr "
 "schnell von ihren Verletzungen."
 
 #. [message]: speaker=Lady Jessene
@@ -7240,11 +7225,6 @@ msgstr "Edler Kämpfer"
 
 #. [unit_type]: id=Noble Fighter, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Fighter.cfg:18
-#, fuzzy
-#| msgid ""
-#| "Young and brash, Fighters fight with a sword, and are vulnerable to "
-#| "ranged attacks from enemies. However they have the potential to become "
-#| "great Commanders one day."
 msgid ""
 "Young and brash, Fighters fight with a sword, and are vulnerable to ranged "
 "attacks from enemies. However, they have the potential to become great "
