--- a/po/wesnoth-multiplayer/de.po
+++ b/po/wesnoth-multiplayer/de.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-11-11 01:32+0100\n"
+"PO-Revision-Date: 2019-03-21 01:01+0100\n"
 "Last-Translator: Severin Glöckner <severin.gloeckner@stud.htwk-leipzig.de>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 2.0\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [generic_multiplayer]: id=user_map
 #: data/multiplayer/_main.cfg:8
@@ -801,22 +801,6 @@ msgstr "Blum Duk"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:147
-#, fuzzy
-#| msgid ""
-#| "Blum Duk was renowned among his goblin clan for having tamed one of the "
-#| "Dire Wolves of the mountains, and he had the courage to match. His "
-#| "leadership and skills alone were what kept the area’s goblins alive "
-#| "despite human and elvish menaces. Rumor had it that his wolf had slain "
-#| "fifty men and a hundred Elves.\n"
-#| "Thus, when he heard of the awful monster that was inhabiting the area, it "
-#| "was only natural that he ride out alone to face it. All the other goblins "
-#| "expected him to slay the creature easily and drag back its carcass to "
-#| "feast on.\n"
-#| "He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk "
-#| "cowered in fright. He tried to wheel his wolf around to run away, but it "
-#| "wouldn’t move. As the creature stalked towards him, he screamed his last "
-#| "words: Good Gog, dog, are yer legs made of stone?!\n"
-#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Blum Duk was renowned among his goblin clan for having tamed one of the Dire "
 "Wolves of the mountains, and he had the courage to match. His leadership and "
@@ -840,11 +824,13 @@ msgstr ""
 "war es zu verdanken, dass der Stamm der Kobolde die Bedrohung durch Mensch "
 "und Elf überstehen konnte. Es ging das Gerücht um, dass sein Reittier "
 "fünfzig Menschen und hundert Elfen getötet habe.\n"
+"\n"
 "Als er die Kunde von einem schrecklichen Monster vernahm, das in der Nähe "
 "seines Stammes hauste, ritt er allein hinaus, um sich dem Ungetüm "
 "entgegenzustellen. Die anderen Kobolde harrten freudig seiner Rückkehr, da "
 "sie wussten, dass Blum Duk die Kreatur erschlagen und mit dem Kadaver "
-"zurückkehren würde. \n"
+"zurückkehren würde\n"
+". \n"
 "Als er jedoch den Basilisken erblickte, wurde er von Furcht ergriffen. Er "
 "versuchte, seinen Wolf zum Rückzug zu bewegen, doch er wollte sich nicht "
 "bewegen. Als die Kreatur auf ihn zu kam, schrie er seine letzten Worte gen "
@@ -883,7 +869,7 @@ msgstr ""
 #. [side]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:162
 msgid "Turin's Monster of the Lake"
-msgstr ""
+msgstr "Turins Monster"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:165
@@ -908,7 +894,7 @@ msgstr ""
 #. [side]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:170
 msgid "The Spider"
-msgstr ""
+msgstr "Die Spinne"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:173
@@ -957,23 +943,6 @@ msgstr "Bramwythl"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:196
-#, fuzzy
-#| msgid ""
-#| "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
-#| "other Woses. More than any other Wose, he enjoyed simply standing alone "
-#| "in the sun, arms upraised, admiring the beauty of the empty sky. Once, "
-#| "even, he confided in a fellow that his greatest wish was to be able to "
-#| "bask forever in the sun’s glory.\n"
-#| "However, not long after, the local wose community heard of the approach "
-#| "of a horrible monster, powerful enough to easily destroy the few woses "
-#| "that lived in the area. They quickly moved off (quickly for Woses, "
-#| "anyway), but Bramwythl was left behind — in their haste, no one had "
-#| "remembered to find him and tell him of the danger.\n"
-#| "He was taken quite unawares by the Basilisk, and turned to stone before "
-#| "he even recognized the beast. His petrified form still stands there "
-#| "today, warmed by the sun’s rays, under an open sky. His greatest wish has "
-#| "been granted.\n"
-#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
 "other Woses. More than any other Wose, he enjoyed simply standing alone in "
@@ -998,12 +967,14 @@ msgstr ""
 "unter dem Licht der Sonne zu stehen und die Schönheit des Himmels zu "
 "betrachten. Einmal gestand er einem Gefährten sogar, dass sein größter "
 "Wunsch es sei, sich auf ewig im wärmenden Licht zu sonnen.\n"
+"\n"
 "Kurze Zeit später jedoch vernahm die örtliche Gemeinschaft der Waldschrate, "
 "dass sich ein grausames Monstrum näherte, das stark genug sei, um sämtliche "
 "Waldschrate in diesem Landstrich zu vernichten. Daher beschlossen sie, "
 "schnellstmöglich das Weite zu suchen (schnellstmöglich in "
 "Waldschratmaßstäben). Jedoch vergaßen sie in ihrer Eile, Bramwythl "
 "aufzusuchen und ihm von der Gefahr zu berichten.\n"
+"\n"
 "Der Basilisk hatte leichtes Spiel mit ihm und er bemerkte die Bestie nicht "
 "einmal, als er auch schon zu Stein erstarrte. Seither steht seine erstarrte "
 "Gestalt unter offenem Himmel im wärmenden Licht der Sonne. Damit wurde "
