--- a/po/wesnoth-multiplayer/zh_TW.po
+++ b/po/wesnoth-multiplayer/zh_TW.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Traditional Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # 楊綮銘 <steven2880@gmail.com>, 2008.
 # YP_Lin <yenpinlin@gmail.com>, 2010.
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-30 22:57+0800\n"
+"PO-Revision-Date: 2019-03-16 21:21+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n>1);\n"
 "X-Poedit-Bookmarks: 123,-1,-1,-1,-1,-1,-1,-1,-1,-1\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [generic_multiplayer]: id=user_map
 #: data/multiplayer/_main.cfg:8
@@ -722,6 +722,24 @@ msgstr "布拉姆．達克"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:147
+#, fuzzy
+#| msgid ""
+#| "Blum Duk was renowned among his goblin clan for having tamed one of the "
+#| "Dire Wolves of the mountains, and he had the courage to match. His "
+#| "leadership and skills alone were what kept the area’s goblins alive "
+#| "despite human and elvish menaces. Rumor had it that his wolf had slain "
+#| "fifty men and a hundred Elves.\n"
+#| "\n"
+#| "Thus, when he heard of the awful monster that was inhabiting the area, it "
+#| "was only natural that he ride out alone to face it. All the other goblins "
+#| "expected him to slay the creature easily and drag back its carcass to "
+#| "feast on.\n"
+#| "\n"
+#| "He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk "
+#| "cowered in fright. He tried to wheel his wolf around to run away, but it "
+#| "wouldn’t move. As the creature stalked towards him, he screamed his last "
+#| "words: Good Gog, dog, are yer legs made of stone?!\n"
+#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Blum Duk was renowned among his goblin clan for having tamed one of the Dire "
 "Wolves of the mountains, and he had the courage to match. His leadership and "
@@ -836,6 +854,25 @@ msgstr "布拉姆維斯爾"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:194
+#, fuzzy
+#| msgid ""
+#| "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
+#| "other Woses. More than any other Wose, he enjoyed simply standing alone "
+#| "in the sun, arms upraised, admiring the beauty of the empty sky. Once, "
+#| "even, he confided in a fellow that his greatest wish was to be able to "
+#| "bask forever in the sun’s glory.\n"
+#| "\n"
+#| "However, not long after, the local wose community heard of the approach "
+#| "of a horrible monster, powerful enough to easily destroy the few woses "
+#| "that lived in the area. They quickly moved off (quickly for Woses, "
+#| "anyway), but Bramwythl was left behind — in their haste, no one had "
+#| "remembered to find him and tell him of the danger.\n"
+#| "\n"
+#| "He was taken quite unawares by the Basilisk, and turned to stone before "
+#| "he even recognized the beast. His petrified form still stands there "
+#| "today, warmed by the sun’s rays, under an open sky. His greatest wish has "
+#| "been granted.\n"
+#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
 "other Woses. More than any other Wose, he enjoyed simply standing alone in "
@@ -1646,8 +1683,10 @@ msgstr "2p — 千刺駐紮"
 
 #. [multiplayer]: id=multiplayer_thousand_stings_garrison
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:39
+#, fuzzy
+#| msgid "A strange place. Designed by Doc Paterson."
 msgid "A strange place. Designed by Doc Paterson"
-msgstr "一個奇異的地方。由Doc Paterson設計"
+msgstr "一個奇異的地方。由Doc Paterson設計。"
 
 #. [side]
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:93
@@ -1950,6 +1989,12 @@ msgstr "4p — 伊薩爾交叉口"
 
 #. [multiplayer]: id=multiplayer_Isars_Cross
 #: data/multiplayer/scenarios/4p_Isars_Cross.cfg:9
+#, fuzzy
+#| msgid ""
+#| "A very small 2 vs. 2 map. Close quarters fighting means the successful "
+#| "rotation of units and planning of moves is important. Teams set for "
+#| "players 1 &amp; 4 vs. 2 &amp; 3 (northeast vs. southwest). Designed for "
+#| "75 starting gold, 20 villages."
 msgid ""
 "A very small 2 vs. 2 map. Close quarters fighting means the successful "
 "rotation of units and planning of moves is important. Teams set for players "
@@ -2038,12 +2083,16 @@ msgstr "4p — 洛里斯河"
 
 #. [multiplayer]: id=multiplayer_Loris_River
 #: data/multiplayer/scenarios/4p_Loris_River.cfg:9
+#, fuzzy
+#| msgid ""
+#| "2 vs. 2 map centered around a river with keeps in opposite corners. "
+#| "Designed for players 1 &amp; 4 vs. 2 &amp; 3. There are 28 villages."
 msgid ""
 "2 vs. 2 map centered around a river with keeps in opposite corners. Designed "
 "for players 1+4 vs. 2+3. There are 28 villages."
 msgstr ""
-"這是一個2對2的地圖，中間是河流，雙方的要塞處在對角綫上。適合玩家1和玩家4對陣"
-"玩家2和玩家3。地圖上有28座村莊。"
+"這是一個2對2的地圖，中間是河流，雙方的要塞處在對角綫上。適合玩家1號和玩家4號"
+"對陣玩家2號和玩家3號。地圖上有28座村莊。"
 
 #. [multiplayer]: id=multiplayer_4p_Morituri
 #: data/multiplayer/scenarios/4p_Morituri.cfg:5
@@ -2067,6 +2116,11 @@ msgstr "地圖上有28座村莊。建議設置每座村莊提供2個金幣。"
 
 #. [multiplayer]: id=multiplayer_Paths_of_Daggers
 #: data/multiplayer/scenarios/4p_Paths_of_Daggers.cfg:9
+#, fuzzy
+#| msgid ""
+#| "A 2 vs. 2 map with 5 separate paths of engagement. Balanced to be played "
+#| "east vs. west (1 &amp; 4 vs. 2 &amp; 3), but works well with any teams or "
+#| "FFA."
 msgid ""
 "A 2 vs. 2 map with 5 separate paths of engagement. Balanced to be played "
 "east vs. west (1+4 vs. 2+3), but works well with any teams or FFA."
@@ -2492,7 +2546,7 @@ msgstr ""
 #. [multiplayer]: id=wesbench_shroud_walk
 #: data/multiplayer/scenarios/Wesbench_Shroud_Walk.cfg:9
 msgid "Wesnoth Benchmark: Walking through Shroud"
-msgstr "韋諾之戰標準圖：穿越迷霧"
+msgstr "韋諾之戰標準圖：穿越黑幕"
 
 #. [multiplayer]: id=wesbench_shroud_walk
 #: data/multiplayer/scenarios/Wesbench_Shroud_Walk.cfg:10
@@ -2502,6 +2556,15 @@ msgid ""
 msgstr ""
 "這是韋諾之戰標準圖，命令行參數為：--no-delay --multiplayer --"
 "scenario=wesbench_shroud_walk --exit-at-end。"
+
+#~ msgid "Sides %s and %d are tied."
+#~ msgstr "陣營 %s 和 %d 勢均力敵。"
+
+#~ msgid "Turin's Monster of the Lake"
+#~ msgstr "杜林的湖中怪獸"
+
+#~ msgid "The Spider"
+#~ msgstr "蜘蛛"
 
 #, fuzzy
 #~| msgid "Age of Heroes"
